syntax = "proto3";

package rivet.backend.pkg.region.get;

import "legacy/proto/common.proto";
import "legacy/proto/backend/region.proto";

message Request {
	repeated rivet.common.Uuid region_ids = 1;
}

message Response {
	repeated rivet.backend.region.Region regions = 1;
}
